minijinja/tests/snapshots/test_lexer__lexer@attrs.txt.snap
---
source: minijinja/tests/test_lexer.rs
description: "{# useless comment #}\n{{ foo.bar[baz].blah }}\n{{ {\"foo\": \"bar\"}.test }}\n{{ [1, 2, 3].test }}"
input_file: minijinja/tests/lexer-inputs/attrs.txt
---
[
    TEMPLATE_DATA("\n"),
    VARIABLE_START(false),
    IDENT(foo),
    DOT,
    IDENT(bar),
    BRACKET_OPEN,
    IDENT(baz),
    BRACKET_CLOSE,
    DOT,
    IDENT(blah),
    VARIABLE_END(false),
    TEMPLATE_DATA("\n"),
    VARIABLE_START(false),
    BRACE_OPEN,
    STR("foo"),
    COLON,
    STR("bar"),
    BRACE_CLOSE,
    DOT,
    IDENT(test),
    VARIABLE_END(false),
    TEMPLATE_DATA("\n"),
    VARIABLE_START(false),
    BRACKET_OPEN,
    INT(1),
    COMMA,
    INT(2),
    COMMA,
    INT(3),
    BRACKET_CLOSE,
    DOT,
    IDENT(test),
    VARIABLE_END(false),
]
