minijinja/tests/snapshots/test_lexer__lexer@basic.txt.snap
---
source: tests/test_lexer.rs
expression: "&tokens"
input_file: tests/lexer-inputs/basic.txt

---
[
    TEMPLATE_DATA("Hello "),
    VARIABLE_START(false),
    IDENT(name),
    VARIABLE_END(false),
    TEMPLATE_DATA("!\n"),
]
