minijinja/tests/snapshots/test_lexer__lexer@block-filter.txt.snap
---
source: minijinja/tests/test_lexer.rs
description: "{% for item in seq -%}\n  {{ item }}{% endfor %}"
input_file: minijinja/tests/lexer-inputs/block-filter.txt
---
BlockStart
  "{%"
Ident("for")
  "for"
Ident("item")
  "item"
Ident("in")
  "in"
Ident("seq")
  "seq"
BlockEnd
  "-%}"
VariableStart
  "{{"
Ident("item")
  "item"
VariableEnd
  "}}"
BlockStart
  "{%"
Ident("endfor")
  "endfor"
BlockEnd
  "%}"

