minijinja/tests/snapshots/test_lexer__lexer@operators.txt.snap
---
source: minijinja/tests/test_lexer.rs
expression: "&tokens"
input_file: minijinja/tests/lexer-inputs/operators.txt

---
[
    VARIABLE_START(false),
    PAREN_OPEN,
    BANG,
    IDENT(a),
    PLUS,
    IDENT(b),
    PAREN_CLOSE,
    MUL,
    PAREN_OPEN,
    IDENT(c),
    MINUS,
    IDENT(d),
    PAREN_CLOSE,
    DIV,
    IDENT(e),
    MOD,
    IDENT(f),
    FLOORDIV,
    IDENT(g),
    TILDE,
    IDENT(h),
    VARIABLE_END(false),
]
