minijinja/tests/snapshots/test_lexer__lexer@single_brace.txt.snap
---
source: minijinja/tests/test_lexer.rs
expression: "&tokens"
input_file: minijinja/tests/lexer-inputs/single_brace.txt
---
[
    TEMPLATE_DATA("{foo} foo {bar}\n"),
]
